--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,21 +8,21 @@ compatibility_flags = [ "nodejs_compat" ]
 enabled = true
 
 [[routes]]
-pattern = "demo.folder.run" # Set your custom domain
+pattern = "p.511520.xyz" # Set your custom domain
 custom_domain = true
 
 # Bindings for Cloudflare D1
 [[d1_databases]]
 binding = "DB"
-database_id = "<uuid>" # Set your database ID
-database_name = "folder-demo" # Set your database name
+database_id = "2886f266-3a65-46db-b42c-c18cfb71896c" # Set your database ID
+database_name = "folder250318" # Set your database name
 migrations_dir="./dist/database/migrations"
 
 # Bindings for Cloudflare R2
 [[r2_buckets]]
 binding = "BLOB"
 migrations_dir="./dist/database/migrations"
-bucket_name = "" # Set your bucket name
+bucket_name = "folder250318" # Set your bucket name
 
 # assets
 [assets]
@@ -30,8 +30,8 @@ binding = "ASSETS"
 directory = "./dist/public/"
 
 [vars]
-NUXT_SESSION_PASSWORD="" # Set your session password with at least 32 characters
-NUXT_OAUTH_GITHUB_CLIENT_ID="" # Set your GitHub OAuth client ID
-NUXT_OAUTH_GITHUB_CLIENT_SECRET="" # Set your GitHub OAuth client secret
+NUXT_SESSION_PASSWORD="tyf790727" # Set your session password with at least 32 characters
+NUXT_OAUTH_GITHUB_CLIENT_ID=Ov23lilbosbU62l00DX6"" # Set your GitHub OAuth client ID
+NUXT_OAUTH_GITHUB_CLIENT_SECRET="0a19b82a3b5f55188a93af886085f839ee59f325" # Set your GitHub OAuth client secret
 NUXT_OAUTH_GOOGLE_CLIENT_ID=""  # Set your Google OAuth client ID
 NUXT_OAUTH_GOOGLE_CLIENT_SECRET="" # Set your Google OAuth client Secret
